# saml10-test-rs

./: Cargo.toml  LICENSE-APACHE  README.md
atsaml10e16a/: ATSAML10E16A.svd  Cargo.toml  README.md  device.x
atsaml10e16a/src/: ac.rs  ccl.rs  core_debug.rs  dib.rs  dsu.rs  eic.rs  evsys.rs  gclk.rs  generic.rs  lib.rs  mclk.rs  nvmctrl.rs  opamp.rs  oscctrl.rs  pac.rs  pm.rs  port.rs  rtc.rs  sercom0.rs  supc.rs  tc0.rs  tram.rs
atsaml10e16a/src/ac/: compctrl0.rs  compctrl1.rs  ctrla.rs  ctrlb.rs  dbgctrl.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  scaler.rs  statusa.rs  statusb.rs  syncbusy.rs  winctrl.rs
atsaml10e16a/src/adc/: avgctrl.rs  calib.rs  ctrla.rs  ctrlb.rs  ctrlc.rs  evctrl.rs  gaincorr.rs  inputctrl.rs  intenclr.rs  intenset.rs  intflag.rs  offsetcorr.rs  refctrl.rs  result.rs  sampctrl.rs  seqctrl.rs  seqstatus.rs  swtrig.rs  syncbusy.rs  winlt.rs  winut.rs
atsaml10e16a/src/ccl/: ctrl.rs  lutctrl.rs  seqctrl.rs
atsaml10e16a/src/core_debug/: dcrsr.rs  demcr.rs  dhcsr.rs  dscsr.rs
atsaml10e16a/src/dac/: ctrla.rs  ctrlb.rs  data.rs  databuf.rs  evctrl.rs  intenclr.rs  intenset.rs  intflag.rs  status.rs  syncbusy.rs
atsaml10e16a/src/dib/: dauthstatus.rs  dcidr0.rs  dcidr1.rs  dcidr2.rs  dcidr3.rs  ddevarch.rs  ddevtype.rs  dlar.rs  dlsr.rs  dpidr0.rs  dpidr1.rs  dpidr2.rs  dpidr3.rs  dpidr4.rs  dpidr5.rs  dpidr6.rs  dpidr7.rs
atsaml10e16a/src/dmac/: active.rs  baseaddr.rs  busych.rs  chctrla.rs  chctrlb.rs  chid.rs  chintenclr.rs  chintenset.rs  chintflag.rs  chstatus.rs  crcchksum.rs  crcctrl.rs  crcdatain.rs  crcstatus.rs  ctrl.rs  (+7 more)
(+363 files in other folders)
