[package]
name = "atsaml10e16a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
vcell = "0.1.3"

[dependencies.cortex-m-rt]
optional = true
version = "0.7"

[features]
rt = ["cortex-m-rt/device"]
